{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "5e13ab77-ceee-4d11-827a-35f1c899cac8",
            "actions": [
                {
                    "name": "Movement",
                    "id": "d5c88f08-27de-48a7-a9af-2fe14e693b77",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": true,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Aim",
                    "id": "c054c45c-6e5f-4d9d-8cb8-2b29da672eb2",
                    "expectedControlLayout": "",
                    "continuous": true,
                    "passThrough": true,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Debug",
                    "id": "e2c9a030-202a-4444-8644-786d9dc4c287",
                    "expectedControlLayout": "",
                    "continuous": true,
                    "passThrough": true,
                    "processors": "",
                    "interactions": "Press",
                    "bindings": []
                },
                {
                    "name": "Jump",
                    "id": "a222af30-5322-4a60-9f99-50ffa77d96e2",
                    "expectedControlLayout": "Button",
                    "continuous": true,
                    "passThrough": true,
                    "processors": "",
                    "interactions": "Press",
                    "bindings": []
                },
                {
                    "name": "Parry",
                    "id": "e6fc2243-b2ee-4b74-8965-1ccf8b038271",
                    "expectedControlLayout": "",
                    "continuous": true,
                    "passThrough": true,
                    "processors": "",
                    "interactions": "Press",
                    "bindings": []
                },
                {
                    "name": "LockAim",
                    "id": "3d8b3dbd-e039-4a66-84f8-c52cbd53eba2",
                    "expectedControlLayout": "Button",
                    "continuous": true,
                    "passThrough": true,
                    "processors": "",
                    "interactions": "Press",
                    "bindings": []
                },
                {
                    "name": "PortalOne",
                    "id": "bc00c7c3-0cad-40d6-906a-2ea88a5eea69",
                    "expectedControlLayout": "Button",
                    "continuous": true,
                    "passThrough": true,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "PortalTwo",
                    "id": "6169c624-d227-4892-9cc3-73cdc09b809b",
                    "expectedControlLayout": "Button",
                    "continuous": true,
                    "passThrough": true,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Shoot",
                    "id": "4c21e7e4-81b8-4e57-af39-9a20f2f72c50",
                    "expectedControlLayout": "Button",
                    "continuous": true,
                    "passThrough": true,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "39d2d934-8e95-4b9d-90e8-1773cef85ce0",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad;MainGamepadScheme",
                    "action": "Movement",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "d131bb02-1d6c-471c-9ecd-530a15f2e16f",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad;MainGamepadScheme",
                    "action": "Aim",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "2ecadf7c-f726-43ad-85e3-2143c3db58b5",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MainGamepadScheme",
                    "action": "Debug",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "234d1d3c-3a88-424a-8ad7-201fa5aa17ce",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MainGamepadScheme",
                    "action": "Jump",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "ab751518-f79c-4da8-bb78-d816e6fabc55",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainGamepadScheme",
                    "action": "Parry",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "cda99926-f724-42ce-a843-114381c83b24",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MainGamepadScheme",
                    "action": "LockAim",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "ebf8b1cb-2387-4b11-866b-b433ac036c06",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(pressPoint=1)",
                    "processors": "",
                    "groups": ";MainGamepadScheme",
                    "action": "PortalOne",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "31076c64-faf2-4870-a4be-2b0e9bd666f2",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press(pressPoint=1)",
                    "processors": "",
                    "groups": ";MainGamepadScheme",
                    "action": "PortalTwo",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "11afea9a-7345-46f8-ae40-121fcb898296",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";MainGamepadScheme",
                    "action": "Shoot",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "d3be82c2-16e6-4932-8645-1be569e75e47",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": ";MainGamepadScheme",
                    "action": "Shoot",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        },
        {
            "name": "General",
            "id": "231f5674-fbca-423b-9142-0f0dd244bb1c",
            "actions": [
                {
                    "name": "RegisterDevice",
                    "id": "97cfcb5d-3407-473a-b5fd-3a98fc24c03a",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": true,
                    "processors": "",
                    "interactions": "Press",
                    "bindings": []
                },
                {
                    "name": "DPadInput",
                    "id": "ed2fd65d-dddb-4a4d-8ca6-63a5ca7cffb3",
                    "expectedControlLayout": "Dpad",
                    "continuous": false,
                    "passThrough": true,
                    "processors": "",
                    "interactions": "Press",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "12a1a6fc-a9bd-4a18-8591-2992077d6e6e",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad;MainGamepadScheme",
                    "action": "RegisterDevice",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "DPad",
                    "id": "0f298309-dd4e-48bc-ba25-d8ec0d713c4f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadInput",
                    "chainWithPrevious": false,
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "up",
                    "id": "37f7381a-f166-4a6b-b59a-67af18535932",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MainGamepadScheme",
                    "action": "DPadInput",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "down",
                    "id": "7208852f-3133-4495-9ea1-007c31a60f59",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadInput",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "left",
                    "id": "133f2aa6-da0f-4df0-807e-1ae9c12dcb10",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadInput",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "right",
                    "id": "ce689ff2-47e3-4451-b1a6-1b2afc023d3d",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadInput",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MainGamepadScheme",
            "basedOn": "",
            "bindingGroup": "MainGamepadScheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}